# ToDoAppFastAPI

./: .gitignore  README.md  db.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 25fe7ea5b44b_create_address_table.py  335af32e9261_add_address_to_user.py  c826c4a6d09e_add_apartment_number_column.py  c96fb23c0164_phone_num_for_user_table.py
routers/: address.py  admin.py  auth.py  todo.py  user.py
