[tool.poetry]
name = "todoappfastapi"
version = "0.1.0"
description = ""
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.15"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
